--- a/src/paths.yaml
+++ b/src/paths.yaml
@@ -1802,40 +1802,23 @@
   put:
     tags:
     - /store
-    summary: Update section
+    summary: Update or delete section
     operationId: storeSectionPut
     description: |
-      Update a server-storage section according to the contents of the
-      request body.
+      Update or delete a server-storage section according to the
+      contents of the request body.
     requestBody:
       content:
         application/json:
           schema:
-            $ref: "./schemas.yaml#/StoreVariableUpdates"
+            oneOf:
+              - $ref: "./schemas.yaml#/StoreVariableUpdates"
+              - type: 'null'
+                description: Delete the entire section.
           example: {"test/delete_me": null, "prefs/color": "cyan"}
     responses:
       "200":
         description: Store update response.
-        content:
-          application/json:
-            schema:
-              $ref: "./schemas.yaml#/StatusObject"
-      "401":
-        description: Unauthorized response.
-        content:
-          application/json:
-            schema:
-              $ref: "./schemas.yaml#/UnauthorizedObject"
-  delete:
-    tags:
-    - /store
-    summary: Delete an entire section
-    operationId: storeSectionDelete
-    description: |
-      Delete a server-storage section.
-    responses:
-      "200":
-        description: Delete store section response.
         content:
           application/json:
             schema:
@@ -1887,37 +1870,20 @@
   put:
     tags:
     - /store
-    summary: Update section variable
+    summary: Update or delete section variable
     operationId: storeSectionVarPut
     description: |
-      Update a section variable according to the contents of the
-      request body.
+      Update or delete a section variable according to the contents of
+      the request body.
     requestBody:
       content:
         application/json:
           schema:
-            $ref: "./schemas.yaml#/StoreSingleVariableUpdate"
+            oneOf:
+              - $ref: "./schemas.yaml#/StoreSingleVariableUpdate"
+              - type: 'null'
+                description: Delete the section variable.
           example: {"":"{\"name\":\"default\",\"changed\":false,\"dashlets\":[{\"tag\":\"flow\",\"id\":1,\"cfg\":{\"nodes\":[{\"pos\":[0,0],\"icon\":\"house\",\"reg\":\"use\"},{\"pos\":[0,1],\"icon\":\"solar\",\"reg\":\"gen\"},{\"pos\":[1,0],\"icon\":\"battery\",\"reg\":\"bat\"},{\"pos\":[0,-1],\"icon\":\"grid\",\"reg\":\"Grid\",\"costsMoney\":true}]}}],\"layouts\":[{\"designWidth\":0,\"designHeight\":0,\"pages\":[{\"locs\":[{\"id\":1,\"x\":0,\"y\":0,\"w\":10,\"h\":10}]}]}]}"}
-    responses:
-      "200":
-        description: Delete section variable response.
-        content:
-          application/json:
-            schema:
-              $ref: "./schemas.yaml#/StatusObject"
-      "401":
-        description: Unauthorized response.
-        content:
-          application/json:
-            schema:
-              $ref: "./schemas.yaml#/UnauthorizedObject"
-  delete:
-    tags:
-    - /store
-    summary: Delete a section variable
-    operationId: storeSectionVarDelete
-    description: |
-      Delete a server-storage section.
     responses:
       "200":
         description: Delete section variable response.
@@ -1972,16 +1938,19 @@
   put:
     tags:
     - /store
-    summary: Update paragraph
+    summary: Update or delete paragraph
     operationId: storeParagraphPut
     description: |
-      Update a paragraph according to the contents of the request
+      Update or delete a paragraph according to the contents of the request
       body.
     requestBody:
       content:
         application/json:
           schema:
-            $ref: "./schemas.yaml#/StoreVariableUpdates"
+            oneOf:
+              - $ref: "./schemas.yaml#/StoreVariableUpdates"
+              - type: 'null'
+                description: Delete the paragraph.
           example: {"start_day": "7","taxes": null}
     responses:
       "200":
@@ -1996,27 +1965,6 @@
           application/json:
             schema:
               $ref: "./schemas.yaml#/UnauthorizedObject"
-  delete:
-    tags:
-    - /store
-    summary: Delete an entire paragraph
-    operationId: storeParagraphDelete
-    description: |
-      Delete a paragraph.
-    responses:
-      "200":
-        description: Delete paragraph response.
-        content:
-          application/json:
-            schema:
-              $ref: "./schemas.yaml#/StatusObject"
-      "401":
-        description: Unauthorized response.
-        content:
-          application/json:
-            schema:
-              $ref: "./schemas.yaml#/UnauthorizedObject"
-
 
 /store/{section}/{paragraph}/{variable}:
   parameters:
@@ -2066,39 +2014,23 @@
   put:
     tags:
     - /store
-    summary: Update variable
+    summary: Update or delete variable
     operationId: storeVarPut
     description: |
-      Update a variable according to the contents of the request body.
+      Update or delete a variable according to the contents of the
+      request body.
     requestBody:
       content:
         application/json:
           schema:
-            $ref: "./schemas.yaml#/StoreVariableUpdates"
+            oneOf:
+              - $ref: "./schemas.yaml#/StoreVariableUpdates"
+              - type: 'null'
+                description: Delete the variable.
           example: {"": "7"}
     responses:
       "200":
         description: Store update response.
-        content:
-          application/json:
-            schema:
-              $ref: "./schemas.yaml#/StatusObject"
-      "401":
-        description: Unauthorized response.
-        content:
-          application/json:
-            schema:
-              $ref: "./schemas.yaml#/UnauthorizedObject"
-  delete:
-    tags:
-    - /store
-    summary: Delete a variable
-    operationId: storeVarDelete
-    description: |
-      Delete a variable.
-    responses:
-      "200":
-        description: Delete store section response.
         content:
           application/json:
             schema:
