src: paths.yaml: fix URL typo

--- a/src/paths.yaml
+++ b/src/paths.yaml
@@ -1687,7 +1687,7 @@
         format string `"%F %T"` is used, which would output July 6,
         2016 4:56pm as `2016-07-06 16:56:00`.  The full syntax
         available in the format string is documented in function
-        [strftime()](https://man7.org/linux/man-pages/man3/strftime.3.htm).
+        [strftime()](https://man7.org/linux/man-pages/man3/strftime.3.html).
 
         Note that the format-string typically will need to be
         percent-encoded.  In particular, each `%` character needs to
